--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
    ========================================================================== */
 
 html {
+  background-color: brown;
   color: #222;
   font-size: 1em;
   line-height: 1.4;
